--- a/style.css
+++ b/style.css
@@ -1,5 +1,5 @@
  * {
-  /* box-sizing: border-box; */
+  box-sizing: border-box;
   margin: 0;
   padding: 0;
 }
@@ -28,6 +28,5 @@ input {
   text-align: center;
 }
 
-ul {
-  
+.  
 }
