--- a/style.css
+++ b/style.css
@@ -4,7 +4,7 @@
   padding: 0;
 }
 html {
-  background: navy;
+  background: darkcyan;
   height: 100%;
 } 
 
@@ -14,7 +14,7 @@ html {
   font-weight: bold;
   padding-top: 40px;
   font-size: 40px;
-  color: darkcyan;
+  color: navy;
 }
 
 .todolist { 
@@ -28,12 +28,17 @@ input {
   text-align: center;
 }
 .container {
+  
+}
+li {
   width: 60%;
   padding: 20px;  
   margin: auto;
+  margin-top: 20px;
   text-align: left;
-  color: darkcyan;
-  display: flex;
-  flex-direction: column;
+  color: cyan;
   justify-content: left;
+  height: fit-content;
+  background-color: navy;
+  border-radius: 10px;
 }
