--- a/style.css
+++ b/style.css
@@ -10,7 +10,6 @@ html {
 
 .welcome {
   text-align: center;
-  text-decoration: wavy;
   font-weight: bold;
   padding-top: 40px;
   font-size: 40px;
@@ -39,7 +38,8 @@ ul {
 }
 li {
   width: 60%;
-  padding: 10px;  
+  padding: 10px 30px 10px 30px;
+
   margin: auto;
   margin-top: 10px;
   text-align: left;
@@ -48,16 +48,17 @@ li {
   border-radius: 10px;
   display: inline-block;
   overflow-wrap: break-word;
-
 }
 
 #box {
   float: left;
   margin-right: 5px;
+  margin-left: -20px;
   vertical-align: middle;
 }
 
 #deleteButton {
   float: inline-end;
-  vertical-align: middle;
+  vertical-align: 50%;
+  margin-right: -20px;
 }
